fix buttons wraping

--- a/packages/frontend/src/components/editEquipments/detailedInformation/detailedInformation.module.scss
+++ b/packages/frontend/src/components/editEquipments/detailedInformation/detailedInformation.module.scss
@@ -17,8 +17,9 @@
   }
 }
 
-.flex {
+.buttonsContainer {
   @extend %flex;
+  white-space: nowrap;
 }
 
 .cardsContainer {
